# scripted-solo-demos

./: .gitignore  reset-cluster.sh  util.sh
admiral-demo/: cleanup-admiral-only.sh  cleanup.sh  demo-dependency.sh  demo.sh  env.sh  install-istio-into-context.sh  remote_cluster_env_vars  reset.sh  setup-admiral-gke.sh  setup-istio-gke.sh
agentgateway/: .gitignore  Dockerfile  README.md  demo.sh  docker-compose.yaml  get-auth0-token.sh  get-keycloak-token.sh  requirements.txt  run-openwebui.sh  run-proxy-local.sh  run-proxy.sh  start-docker-compose-all.sh  stop-docker-compose-all.sh
agentgateway/prompt-injection-mcp/: .env.example  .gitignore  Dockerfile  README.md  kmcp.yaml  pyproject.toml  run-mcp.sh
agentgateway/prompt-injection-mcp/src/: main.py
agentgateway/prompt-injection-mcp/src/core/: __init__.py  server.py  utils.py
agentgateway/prompt-injection-mcp/src/tools/: __init__.py  echo.py  send_email.py  sensitive_query.py
agentgateway/prompt-injection-mcp/tests/: test_discovery.py  test_server.py  test_tools.py
ai-gateway/: .gitignore  00-demo-simple.sh  01-demo-hidecred.sh  02-demo-mngcred.sh  03-demo-ratelimit.sh  04-demo-model-failover.sh  05-a-prompt-guard.sh  05-b-prompt-guard-presidio.sh  05-prompt-guard.sh  06-semantic-cache.sh  07-rag.sh  08-traffic-shift.sh  NOTES  build-extdeps.sh  build-extproc.sh  call-gateway.sh  cleanup-kind.sh  demo.sh  ff.py  gloo-gateway-values.yaml  print_token.sh  (+14 more)
ai-gateway-nim/: call-gateway1.sh  call-gateway2.sh  call-nim.sh  demo.sh  deploy-failover.sh  env-gateway.sh  env.sh  notes.md  reset-demo.sh  setup-all.sh
(+2118 files in other folders)
